SER-518 fixed show sold out link on mobile

--- a/modules/front-end/app/assets/stylesheets/_marketplace.less
+++ b/modules/front-end/app/assets/stylesheets/_marketplace.less
@@ -914,7 +914,7 @@
 					.view-options .sort-by { margin-left: 0; }
 					
 					.verticals {
-						
+        
 						table {
 						
   						font-size: .75em;
@@ -928,7 +928,23 @@
 						section {
 	
 							margin-left: 0;
-						
+						  
+              div {
+                h1 {
+                  float: none;
+                }
+                .available-only {
+                  float: none;
+                  position: static;
+                  margin-bottom: 5px;
+                  ol { 
+                    float: none;
+                    li {
+                      float: none;
+                    }
+                  }    
+                } 
+              }
 							article {
 								width: 100%;
 								margin: 0 0 40px 0;
